--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,8 @@ pipeline {
     stages {
         stage("build") {
             steps {
-                echo "build stage"
+                echo "build stage "
+                echo "building"
                    }
                 }   
         stage("Test") {
